# GSM-VI

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_advi.py  example_bam.py  example_gsm.py  example_gsm_init.py  example_gsm_initializers.py  example_gsm_mf.py  example_gsm_numpy.py  example_initializers.py  example_lsgsm.py  example_pathfinder.py  example_pathfinder_blackjax.py  example_scorenorm.py  jaxoplanet_example.py
gsmvi/: advi.py  bam.py  bam_dc.py  bam_lrproject.py  bbvi.py  bbvi_momo.py  common.py  em_lr_projection.py  factorized_bam.py  flowvi.py  gsm.py  gsm_mf.py  gsm_numpy.py  initializers.py  low_rank_gaussian.py  ls_gsm.py  ls_gsm2.py  monitors.py  ngd.py  pbam.py  pgsm.py  plotting.py  realNVP.py  scipy_lbfgs_wrapper.py
notebooks/: GP_synthetic-Poisson.ipynb  Rebuttal and NGD.ipynb  em_gaussian.ipynb  em_gaussian_dev.ipynb  jaxoplanet.ipynb  pbam.ipynb  posteriordb.ipynb
scripts/: emfits.py  facvi_exp.py  frgaussian.py  imports.py  job_asinh.sh  job_asinh_advi.sh  job_asinh_gsm.sh  job_facvi.sh  job_frg.sh  job_padvi.sh  job_pbam.sh  job_pbamlr.sh  job_pdb_advi.sh  job_pdb_gsm.sh  job_pdb_lsgsm.sh  padvi_exp.py  pbam_exp.py  pdbexp.py  pgsm_exp.py  run_pdb.py  setup_regs.py  sinh-arcsinh.py
src/: advi.py  gsm.py  gsm_numpy.py  initializers.py  pathfinder.py  pathfinder_blackjax.py
submitted-version/scripts_submitted/: folder_path.py  frgaussian.py  gaussianq.py  illcondfrg.py  main.py  ngdvi.py  nongaussian.py  runs.py
test/: reparameterized_gradients.py
utils/: jax_utils.py  monitors.py  plotting.py
(+6 files in other folders)
